feat: bridge nio chat server through spring rest api