@@ -1,7 +1,8 @@
 package com.nexusconnect.servicebackend.nio;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import org.slf4j.Logger; import org.slf4j.LoggerFactory;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
 import java.net.InetSocketAddress;
@@ -11,28 +12,29 @@ import java.nio.channels.*;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.concurrent.*;
-import java.util.stream.Collectors;
 
 
 public class NioChatServer implements Runnable {
     private static final Logger log = LoggerFactory.getLogger(NioChatServer.class);
     private static final int READ_BUF = 64 * 1024;
+    private static final int HISTORY_LIMIT = 200;
 
     private final int port;
     private final ObjectMapper json = new ObjectMapper();
     private final ExecutorService workers =
-            Executors.newFixedThreadPool(Math.max(2, Runtime.getRuntime().availableProcessors()-1));
+            Executors.newFixedThreadPool(Math.max(2, Runtime.getRuntime().availableProcessors() - 1));
 
-  
-    private final Map<String,String> auth = Map.of(
-            "lakshan","123", "kevin","123", "alice","a1", "bob","b1"
+
+    private final Map<String, String> auth = Map.of(
+            "lakshan", "123", "kevin", "123", "alice", "a1", "bob", "b1"
     );
 
- 
-    private final ConcurrentHashMap<String, Session> online = new ConcurrentHashMap<>();
-    private final ConcurrentHashMap<SocketChannel, Session> sessions = new ConcurrentHashMap<>();
 
-   
+    private final ConcurrentHashMap<String, Presence> online = new ConcurrentHashMap<>();
+    private final ConcurrentHashMap<SocketChannel, Session> sessions = new ConcurrentHashMap<>();
+    private final Deque<ChatMessage> history = new ConcurrentLinkedDeque<>();
+
+
     private volatile boolean running = false;
     private Selector selector;
     private ServerSocketChannel server;
@@ -165,15 +167,21 @@ public class NioChatServer implements Runnable {
         if (user == null || pass == null) { sendJson(s, Map.of("type","LOGIN_FAIL","reason","missing")); return; }
         if (!pass.equals(auth.get(user))) { sendJson(s, Map.of("type","LOGIN_FAIL","reason","bad creds")); return; }
 
-        Session prev = online.put(user, s);
-        if (prev != null && prev != s) disconnect(prev, "relogin");
+        Presence prev = online.put(user, s);
+        if (prev instanceof Session prevSession && prevSession != s) {
+            disconnect(prevSession, "relogin");
+        }
 
         s.username = user; s.ip = srcIp;
         s.fileTcp = fileTcp != null ? fileTcp : -1;
         s.voiceUdp= voiceUdp!= null ? voiceUdp: -1;
 
-        sendJson(s, Map.of("type","LOGIN_OK", "you", user, "users", usersSnapshot()));
-        broadcastExcept(s, Map.of("type","USER_JOINED","user",user));
+        sendJson(s, Map.of(
+                "type","LOGIN_OK",
+                "you", user,
+                "users", usersSnapshot()
+        ));
+        broadcastExcept(s, Map.of("type","USER_JOINED","user",user,"viaNio",true));
         log.info("LOGIN {} from {} (fileTcp={}, voiceUdp={})", user, srcIp, s.fileTcp, s.voiceUdp);
     }
 
@@ -181,36 +189,127 @@ public class NioChatServer implements Runnable {
         if (!s.isAuthed()) { sendJson(s, Map.of("type","ERROR","msg","login first")); return; }
         String text = str(obj.get("text"));
         if (text == null || text.isBlank()) return;
-        Map<String,Object> frame = new LinkedHashMap<>();
-        frame.put("type","MSG"); frame.put("from", s.username);
-        frame.put("text", text); frame.put("ts", System.currentTimeMillis()/1000);
-        broadcast(frame);
+        ChatMessage msg = new ChatMessage(s.username, text, System.currentTimeMillis() / 1000);
+        recordMessage(msg);
+        broadcastChat(msg);
     }
 
     private void handleAskPeer(Session s, Map<?,?> obj) {
         if (!s.isAuthed()) { sendJson(s, Map.of("type","ERROR","msg","login first")); return; }
         String target = str(obj.get("user"));
-        Session t = online.get(target);
+        Presence t = online.get(target);
         if (t == null) { sendJson(s, Map.of("type","PEER","user",target,"error","offline")); return; }
-        sendJson(s, Map.of("type","PEER","user",target,"ip",t.ip,"fileTcp",t.fileTcp,"voiceUdp",t.voiceUdp));
+        sendJson(s, Map.of(
+                "type","PEER",
+                "user",target,
+                "ip",t.ip(),
+                "fileTcp",t.fileTcp(),
+                "voiceUdp",t.voiceUdp(),
+                "viaNio", t.viaNio()
+        ));
     }
 
     private void sendUsersList(Session s) { sendJson(s, Map.of("type","USERS","list", usersSnapshot())); }
 
     public List<Map<String,Object>> usersSnapshot() {
-        return online.values().stream().map(sess -> {
+        return online.values().stream().map(p -> {
             Map<String,Object> m = new LinkedHashMap<>();
-            m.put("user", sess.username); m.put("ip", sess.ip);
-            m.put("fileTcp", sess.fileTcp); m.put("voiceUdp", sess.voiceUdp);
+            m.put("user", p.username());
+            m.put("ip", p.ip());
+            m.put("fileTcp", p.fileTcp());
+            m.put("voiceUdp", p.voiceUdp());
+            m.put("viaNio", p.viaNio());
             return m;
-        }).collect(Collectors.toList());
+        }).toList();
     }
+
+    public List<UserPresence> onlineUsers() {
+        return online.values().stream()
+                .map(p -> new UserPresence(p.username(), p.ip(), p.fileTcp(), p.voiceUdp(), p.viaNio()))
+                .toList();
+    }
+
+    public List<ChatMessage> recentMessages() {
+        synchronized (history) {
+            return new ArrayList<>(history);
+        }
+    }
+
     public Optional<Peer> findPeer(String user) {
-        Session t = online.get(user);
+        Presence t = online.get(user);
         if (t == null) return Optional.empty();
-        return Optional.of(new Peer(t.ip, t.fileTcp, t.voiceUdp));
+        return Optional.of(new Peer(t.ip(), t.fileTcp(), t.voiceUdp(), t.viaNio()));
     }
-    public record Peer(String ip, int fileTcp, int voiceUdp) {}
+
+    public LoginResult loginHttp(String user, String pass, String ip, Integer fileTcp, Integer voiceUdp) {
+        if (user == null || pass == null) {
+            return new LoginResult(false, "missing", List.of(), recentMessages());
+        }
+        if (!verifyCredentials(user, pass)) {
+            return new LoginResult(false, "bad creds", List.of(), recentMessages());
+        }
+        int file = fileTcp != null ? fileTcp : -1;
+        int voice = voiceUdp != null ? voiceUdp : -1;
+        HttpPresence presence = new HttpPresence(user, ip, file, voice);
+        Presence previous = online.put(user, presence);
+        if (previous instanceof Session session) {
+            disconnect(session, "relogin via http");
+        }
+        if (!(previous instanceof HttpPresence)) {
+            broadcastExcept(null, Map.of("type","USER_JOINED","user",user,"viaNio",false));
+        }
+        log.info("HTTP LOGIN {} from {} (fileTcp={}, voiceUdp={})", user, ip, file, voice);
+        return new LoginResult(true, null, onlineUsers(), recentMessages());
+    }
+
+    public boolean logoutHttp(String user) {
+        if (user == null) return false;
+        Presence current = online.get(user);
+        if (current instanceof HttpPresence httpPresence && online.remove(user, httpPresence)) {
+            broadcastExcept(null, Map.of("type","USER_LEFT","user", user, "viaNio", false));
+            log.info("HTTP LOGOUT {}", user);
+            return true;
+        }
+        return false;
+    }
+
+    public Optional<ChatMessage> broadcastFrom(String user, String text) {
+        if (user == null || text == null || text.isBlank()) return Optional.empty();
+        Presence presence = online.get(user);
+        if (presence == null) return Optional.empty();
+        ChatMessage msg = new ChatMessage(user, text, System.currentTimeMillis() / 1000);
+        recordMessage(msg);
+        broadcastChat(msg);
+        return Optional.of(msg);
+    }
+
+    public boolean verifyCredentials(String user, String pass) {
+        if (user == null || pass == null) return false;
+        return pass.equals(auth.get(user));
+    }
+
+    public record Peer(String ip, int fileTcp, int voiceUdp, boolean viaNio) {}
+    public record UserPresence(String user, String ip, int fileTcp, int voiceUdp, boolean viaNio) {}
+    public record ChatMessage(String from, String text, long timestampSeconds) {}
+    public record LoginResult(boolean success, String reason, List<UserPresence> users, List<ChatMessage> messages) {}
+
+    private void recordMessage(ChatMessage msg) {
+        synchronized (history) {
+            history.addLast(msg);
+            while (history.size() > HISTORY_LIMIT) {
+                history.pollFirst();
+            }
+        }
+    }
+
+    private void broadcastChat(ChatMessage msg) {
+        Map<String,Object> frame = new LinkedHashMap<>();
+        frame.put("type", "MSG");
+        frame.put("from", msg.from());
+        frame.put("text", msg.text());
+        frame.put("ts", msg.timestampSeconds());
+        broadcastFrame(frame);
+    }
 
     private void sendJson(Session s, Map<String,?> map) {
         try {
@@ -218,7 +317,7 @@ public class NioChatServer implements Runnable {
             s.enqueue(ByteBuffer.wrap(bytes));
         } catch (Exception e) { log.warn("sendJson failed", e); }
     }
-    private void broadcast(Map<String,?> map) {
+    private void broadcastFrame(Map<String,?> map) {
         byte[] bytes;
         try { bytes = (json.writeValueAsString(map) + "\n").getBytes(StandardCharsets.UTF_8); }
         catch (Exception e) { return; }
@@ -236,7 +335,7 @@ public class NioChatServer implements Runnable {
     private void disconnect(Session s, String reason) {
         try {
             if (s.username != null && online.remove(s.username, s)) {
-                broadcastExcept(s, Map.of("type","USER_LEFT","user",s.username));
+                broadcastExcept(s, Map.of("type","USER_LEFT","user",s.username,"viaNio",true));
             }
             sessions.remove(s.ch);
             s.key.cancel();
@@ -254,7 +353,15 @@ public class NioChatServer implements Runnable {
     private static String str(Object o){ return o==null?null:String.valueOf(o); }
     private static Integer intOrNull(Object o){ try{ return o==null?null:Integer.parseInt(String.valueOf(o)); }catch(Exception e){return null;} }
 
-    private static class Session {
+    private interface Presence {
+        String username();
+        String ip();
+        int fileTcp();
+        int voiceUdp();
+        boolean viaNio();
+    }
+
+    private static class Session implements Presence {
         final SocketChannel ch; final SelectionKey key;
         final ByteBuffer readBuf = ByteBuffer.allocateDirect(READ_BUF);
         final StringBuilder lineBuffer = new StringBuilder(2048);
@@ -268,5 +375,31 @@ public class NioChatServer implements Runnable {
             key.interestOps(key.interestOps() | SelectionKey.OP_WRITE);
             key.selector().wakeup();
         }
+
+        @Override public String username() { return username; }
+        @Override public String ip() { return ip; }
+        @Override public int fileTcp() { return fileTcp; }
+        @Override public int voiceUdp() { return voiceUdp; }
+        @Override public boolean viaNio() { return true; }
+    }
+
+    private static class HttpPresence implements Presence {
+        private final String username;
+        private final String ip;
+        private final int fileTcp;
+        private final int voiceUdp;
+
+        HttpPresence(String username, String ip, int fileTcp, int voiceUdp) {
+            this.username = username;
+            this.ip = ip;
+            this.fileTcp = fileTcp;
+            this.voiceUdp = voiceUdp;
+        }
+
+        @Override public String username() { return username; }
+        @Override public String ip() { return ip; }
+        @Override public int fileTcp() { return fileTcp; }
+        @Override public int voiceUdp() { return voiceUdp; }
+        @Override public boolean viaNio() { return false; }
     }
 }
